hide user list arrow on profile page for logged-out users

--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="page-header">
-        <div class="breakout"><a href="{{base}}/users"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
+        {% if user_login %}<div class="breakout"><a href="{{base}}/users"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>{% endif %}
         <div class="container">
             <h1><a href="{{filename}}">{{ username }}</a>
                 <small>
