--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -91,12 +91,21 @@ a.text, a:hover.text, a:active.text, .panel a, .panel a:hover, .panel a:active {
 	}
 }
 
-footer {
-	margin-top: 20px;
+.page-footer {
+    border-top: 1px solid #EEE;
+	margin-top: 15px;
+    padding-top: 9px;
 }
 
-footer span, footer span a {
+footer span, footer span a, footer svg {
 	display: inline;
+}
+
+.page-footer footer svg {
+    height: 12px;
+    width: 16px;
+    position: relative;
+    top: 1px;
 }
 
 .jumbotron {
