--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -22,57 +22,74 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>{% trans %}User{% endtrans %}</h2>
-                <ul class="list-group">
-                    {% if flags.founder %}
-                        <li class="list-group-item" title="{% trans %}Well that took a bit longer than expected{% endtrans %}"><a href="{{base}}/about#development" class="text"><span class="glyphicon glyphicon-king"></span> {% trans %}Founder of Lorry{% endtrans %}</a></li>
-                        {% elseif flags.alpha %}
-                        <li class="list-group-item" title="{% trans %}Registered on the alpha site{% endtrans %}"><span class="glyphicon glyphicon-knight"></span> {% trans %}Took part in Lorry Alpha{% endtrans %}</li>
-                        {% elseif flags.beta %}
-                        <li class="list-group-item" title="{% trans %}Registered on the beta site{% endtrans %}"><span class="glyphicon glyphicon-pawn"></span> {% trans %}Took part in Lorry Beta{% endtrans %}</li>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-group">
+                            {% if flags.founder %}
+                                <li class="list-group-item" title="{% trans %}Well that took a bit longer than expected{% endtrans %}"><a href="{{base}}/about#development" class="text"><span class="glyphicon glyphicon-king"></span> {% trans %}Founder of Lorry{% endtrans %}</a></li>
+                                {% elseif flags.alpha %}
+                                <li class="list-group-item" title="{% trans %}Registered on the alpha site{% endtrans %}"><span class="glyphicon glyphicon-knight"></span> {% trans %}Took part in Lorry Alpha{% endtrans %}</li>
+                                {% elseif flags.beta %}
+                                <li class="list-group-item" title="{% trans %}Registered on the beta site{% endtrans %}"><span class="glyphicon glyphicon-pawn"></span> {% trans %}Took part in Lorry Beta{% endtrans %}</li>
+                                {% endif %}
+                                {% if flags.vip %}
+                                <li class="list-group-item" title="{% trans %}Built something awesome for the Clonk community{% endtrans %}"><span class="glyphicon glyphicon-globe"></span> {% trans %}Valuable community member{% endtrans %}</li>
+                                {% endif %}
+                                {% if flags.coder %}
+                                <li class="list-group-item" title="{% trans %}Knows Google-fu{% endtrans %}"><a href="https://github.com/beheh/clonklorry/graphs/contributors" class="text"><span class="glyphicon glyphicon-cog"></span> {% trans %}Lorry developer{% endtrans %}</a></li>
+                                {% endif %}
+                                {% if flags.reporter %}
+                                <li class="list-group-item" title="{% trans %}&quot;Hey, what's that button do?&quot;{% endtrans %}"><a href="https://github.com/beheh/clonklorry/issues" class="text"><span class="glyphicon glyphicon-flag"></span> {% trans %}Bugreporter{% endtrans %}</a></li>
+                                {% endif %}
+                                {% if registration %}
+                                <li class="list-group-item" title="{% trans %}Welcome to Lorry!{% endtrans %}"><span class="glyphicon glyphicon-user"></span> {% trans %}Registered since {{registration}}{% endtrans %}</li>
+                                {% endif %}
+                        </ul>
+                        {% if (user_moderator and moderator == false) or user_administrator %}
+                            <p>
+                                <a href="{{username}}/edit" class="btn btn-default">{% trans %}Edit user{% endtrans %}</a>
+                                {% if user_administrator %}<a href="{{username}}/audit" class="btn btn-info">{% trans %}Moderator audit{% endtrans %}</a>{% endif %}
+                            </p>
                         {% endif %}
-                        {% if flags.vip %}
-                        <li class="list-group-item" title="{% trans %}Built something awesome for the Clonk community{% endtrans %}"><span class="glyphicon glyphicon-globe"></span> {% trans %}Valuable community member{% endtrans %}</li>
+                        {% if clonkforge or github %}
+                            <h3>{% trans %}Links{% endtrans %}</h3>
+                            <ul class="list-group">
+                                {% if clonkforge %}<li class="list-group-item"><a href="{{clonkforge.url}}">{{clonkforge.profile}}</a></li>{% endif %}
+                                {% if github %}<li class="list-group-item"><a href="{{github.url}}">{{github.profile}}</a></li>{% endif %}
+                            </ul>
                         {% endif %}
-                        {% if flags.coder %}
-                        <li class="list-group-item" title="{% trans %}Knows Google-fu{% endtrans %}"><a href="https://github.com/beheh/clonklorry/graphs/contributors" class="text"><span class="glyphicon glyphicon-cog"></span> {% trans %}Lorry developer{% endtrans %}</a></li>
-                        {% endif %}
-                        {% if flags.reporter %}
-                        <li class="list-group-item" title="{% trans %}&quot;Hey, what's that button do?&quot;{% endtrans %}"><a href="https://github.com/beheh/clonklorry/issues" class="text"><span class="glyphicon glyphicon-flag"></span> {% trans %}Bugreporter{% endtrans %}</a></li>
-                        {% endif %}
-                        {% if registration %}
-                        <li class="list-group-item" title="{% trans %}Welcome to Lorry!{% endtrans %}"><span class="glyphicon glyphicon-user"></span> {% trans %}Registered since {{registration}}{% endtrans %}</li>
-                        {% endif %}
-                </ul>
-                {% if (user_moderator and moderator == false) or user_administrator %}
-                    <p>
-                        <a href="{{username}}/edit" class="btn btn-default">{% trans %}Edit user{% endtrans %}</a>
-                        {% if user_administrator %}<a href="{{username}}/audit" class="btn btn-info">{% trans %}Moderator audit{% endtrans %}</a>{% endif %}
-                    </p>
-                {% endif %}
-                {% if clonkforge or github %}
-                    <h3>{% trans %}Links{% endtrans %}</h3>
-                    <ul class="list-group">
-                        {% if clonkforge %}<li class="list-group-item"><a href="{{clonkforge.url}}">{{clonkforge.profile}}</a></li>{% endif %}
-                        {% if github %}<li class="list-group-item"><a href="{{github.url}}">{{github.profile}}</a></li>{% endif %}
-                    </ul>
-                {% endif %}
+                    </div>
+                </div>
             </div>
+            <hr class="visible-xs visible-sm">
             <div class="col-md-8">
                 <h2 id="activity">{% trans %}Activity{% endtrans %}</h2>
-                {% set developer_portal %}<a href="{{base}}/developers">{% trans %}developer portal{% endtrans %}</a>{% endset %}
-                {% if addons %}
-                    <ul class="media-list">
-                        {% for addon in addons %}
-                            {% include "functions/addon.twig" %}
-                        {% endfor %}
-                    </ul>
-                {% elseif self %}
-                    <div class="alert alert-info">{% trans %}You have not released any addons yet.{% endtrans %}</a></div>
-                    <p class="help-block">{% trans %}Visit the {{developer_portal}} to get started.{% endtrans %}</p>
-                {% else %}
-                    <div class="alert alert-info">{% trans %}This user has not released any addons yet.{% endtrans %}</div>
-                    <p class="help-block">{% trans %}Learn more at the {{developer_portal}}.{% endtrans %}</p>
-                {% endif %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <!--<h3>{% trans %}Addons{% endtrans %}</h3>-->
+                        {% set developer_portal %}<a href="{{base}}/developers">{% trans %}developer portal{% endtrans %}</a>{% endset %}
+                        {% if addons %}
+                            <ul class="media-list">
+                                {% for addon in addons %}
+                                    {% include "functions/addon.twig" %}
+                                {% endfor %}
+                            </ul>
+                        {% elseif self %}
+                            <div class="alert alert-info">{% trans %}You have not released any addons yet.{% endtrans %}</a></div>
+                            <p class="help-block">{% trans %}Visit the {{developer_portal}} to get started.{% endtrans %}</p>
+                        {% else %}
+                            <div class="alert alert-info">{% trans %}This user has not released any addons yet.{% endtrans %}</div>
+                            <p class="help-block">{% trans %}Learn more at the {{developer_portal}}.{% endtrans %}</p>
+                        {% endif %}
+                        <!--<h3>{% trans %}Comments{% endtrans %}</h3>
+                        {% if comments %}
+                        {% elseif self %}
+                            <div class="alert alert-info">{% trans %}You have not written any comment yet.{% endtrans %}</a></div>
+                        {% else %}
+                            <div class="alert alert-info">{% trans %}This user has not written any comments yet.{% endtrans %}</div>
+                        {% endif %}-->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
