--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -3,51 +3,52 @@
 {% set title = 'Contact'|trans %}
 
 {% block content %}
-	<div class="page-header">
-		<div class="container">
-			<h1>{{title}}</h1>
-		</div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-7">
-				<h2>{% trans %}We &hearts; feedback{% endtrans %}</h2>
-				<p>{% trans %}We here are fans of Clonk. We built this site as members of our community for the game and want to do our best.{% endtrans %}</p>
-				<p>{% trans %}If you have any wishes or should encounter any problem, do not hesitate to contact us:{% endtrans %}</p>
-				{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
-				{% if not hide_form %}
-				<form method="post">
-					<div class="form-group">
-						<textarea class="form-control contact-form" name="message" rows="10" required>{{message}}</textarea>
-					</div>
-					{% if by %}
-						{% set sender = '<strong>' ~ by|escape('html') ~ '</strong>' %}
-						<p class="pull-right help-block">{% trans %}Will be sent as {{sender}}.{% endtrans %}</p>
-					{% endif %}
-					<button class="btn btn-primary" type="submit">{% trans "Send feedback" %}</button>
-				</form>
-				{% endif %}
-			</div>
-			<div class="col-md-5">
-				<hr class="visible-xs visible-sm">
-				<h2>{% trans %}Legal{% endtrans %}</h2>
-				{% set legalmail = "<a href=\"mailto:" ~ legal_address ~ "\">" ~ legal_address ~ "</a>" %}
-				<p>{% trans %}If you have any legal issues please do not hesitate to contact us either via our feedback form or via {{legalmail}}. That way we are able to quickly resolve to any problems that might occur or remove any content which infringes your rights.{% endtrans %}</p>
-				{% if site_trademark %}
-				<p>{{ site_trademark|raw }}.</p>
-				{% endif %}
-				<p>
-					<a href="{{base}}/privacy" class="btn btn-default">{% trans %}Privacy policy{% endtrans %}</a>
-				</p>
-				<h3>{% trans %}Disclaimer{% endtrans %}</h3>
-				<p>{% trans %}We are not responsible for the content of outgoing links or user generated content. User generated content does not necessarily reflect the view of the site owners.{% endtrans %}</p>
-				{% if address %}
-				<h3>{% trans %}Site owner{% endtrans %}</h3>
-				<address>
-					{{ address|raw }}
-				</address>
-				{% endif %}
-			</div>
-		</div>
-	</div>
+    <div class="page-header">
+        <div class="container">
+            <h1>{{title}}</h1>
+            <p class="lead">{% trans %}We're here as fans of Clonk. Send us a message if you have any problems with the site.{% endtrans %}</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <h2>{% trans %}Ticket{% endtrans %}</h2>
+                {% include 'functions/alert.twig' with {'selector' : 'contact'} %}
+                {% if not hide_form %}
+                    <form method="post">
+                        <div class="form-group">
+                            <label for="email">{% trans "Email address" %}</label>
+                            <input type="text" class="form-control" name="email" id="email" value="{% if email %}{% elseif user_login %}{{user.email}}{% endif %}"{% if user_login %} disabled{% endif %}>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">{% trans "Subject" %}</label>
+                            <input type="text" class="form-control" name="subject" id="url" value="">
+                        </div>
+                        <div class="form-group">
+                            <label for="url">{% trans "Message" %}</label>
+                            <textarea class="form-control contact-form" name="message" rows="7" required>{{message}}</textarea>
+                        </div>
+                        <button class="btn btn-primary" type="submit">{% trans "Send message" %}</button>
+                    </form>
+                {% endif %}
+            </div>
+            <div class="col-md-5">
+                <hr class="visible-xs visible-sm">
+                <h2>{% trans %}Legal{% endtrans %}</h2>
+                {% set legalmail = "<a href=\"mailto:" ~ legal_address ~ "\">" ~ legal_address ~ "</a>" %}
+                <p>{% trans %}If you have any legal issues please do not hesitate to contact us either via our feedback form or via {{legalmail}}. That way we are able to quickly resolve to any problems that might occur or remove any content which infringes your rights.{% endtrans %}</p>
+                {% if site_trademark %}
+                    <p>{{ site_trademark|raw }}.</p>
+                {% endif %}
+                {% if address %}
+                    <h3>{% trans %}Site owner{% endtrans %}</h3>
+                    <address>
+                        {{ address|raw }}
+                    </address>
+                {% endif %}
+                <h3>{% trans %}Disclaimer{% endtrans %}</h3>
+                <p>{% trans %}We are not responsible for the content of outgoing links or user generated content. User generated content does not necessarily reflect the view of the site owners.{% endtrans %}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
