slightly improve footer

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -93,8 +93,15 @@ a.text, a:hover.text, a:active.text, .panel a, .panel a:hover, .panel a:active {
 
 .page-footer {
     border-top: 1px solid #EEE;
-	margin-top: 15px;
+	margin-top: 20px;
     padding-top: 9px;
+    
+    svg {
+        height: 12px;
+        width: 16px;
+        position: relative;
+        top: 1px;
+    }
 }
 
 footer span, footer span a, footer svg {
@@ -102,10 +109,7 @@ footer span, footer span a, footer svg {
 }
 
 .page-footer footer svg {
-    height: 12px;
-    width: 16px;
-    position: relative;
-    top: 1px;
+    
 }
 
 .jumbotron {
